k8s/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: monitoring.local
      http:
        paths:
          - path: /graylog-ui
            pathType: Prefix
            backend:
              service:
                name: graylog
                port:
                  number: 9000
          - path: /graylog-gelf
            pathType: Prefix
            backend:
              service:
                name: graylog
                port:
                  number: 12201
          - path: /graylog-syslog
            pathType: Prefix
            backend:
              service:
                name: graylog
                port:
                  number: 1514
          - path: /jaeger-ui
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
          - path: /jaeger-udp-compact
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 6831
          - path: /jaeger-udp-binary
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 5775
          - path: /jaeger-udp-compact-tcp
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 6832
          - path: /jaeger-http-collector
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 14268
          - path: /jaeger-grpc
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 14250
          - path: /jaeger-zipkin
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 9411
